merul_Dev/src/objects/WTOTestObject__c.object
<CustomObject>
    <description>It is used for testing purpose</description>
    <fields>
        <fullName>TestMultiselect__c</fullName>
        <label>TestMultiselect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testForCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testForCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testForCurrency__c</fullName>
        <label>testForCurrency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>testForDateTime__c</fullName>
        <label>testForDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>testForDate__c</fullName>
        <label>testForDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testForEmail__c</fullName>
        <label>testForEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>testForFormula__c</fullName>
        <formula>testForText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testForFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testForNumber__c</fullName>
        <label>testForNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testForPercentage__c</fullName>
        <label>testForPercentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>testForPhone__c</fullName>
        <label>testForPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testForPicklistMulti__c</fullName>
        <label>testForPicklistMulti</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>testForPicklist__c</fullName>
        <label>testForPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>testForTextAreaLong__c</fullName>
        <label>testForTextAreaLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testForTextAreaRich__c</fullName>
        <label>testForTextAreaRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>testForTextArea__c</fullName>
        <label>testForTextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>testForText__c</fullName>
        <label>testForText</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testForURL__c</fullName>
        <label>testForURL</label>
        <type>Url</type>
    </fields>
    <label>WTOTestObject</label>
    <nameField>
        <label>WTOTestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WTOTestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>